[package]
authors = ["Alasdair Pan <alasdairpan@gmail.com>"]
categories = ["config", "filesystem"]
description = "A library for automatically reloading configuration files"
documentation = "https://docs.rs/reloadify/"
edition = "2021"
keywords = ["reload", "watch", "notify", "config"]
license = "MIT"
name = "reloadify"
readme = "README.md"
repository = "https://github.com/alasdairpan/reloadify/"
version = "0.1.2"

[features]
default = ["json", "yaml", "toml", "xml", "ini"]
ini = ["dep:serde_ini"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
xml = ["dep:serde-xml-rs"]
yaml = ["dep:serde_yaml"]

[dependencies]
if_chain = "1.0"
notify = "6.1"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = {version = "0.6", optional = true}
serde_ini = {version = "0.2", optional = true}
serde_json = {version = "1.0", optional = true}
serde_yaml = {version = "0.9", optional = true}
thiserror = "1.0"
toml = {version = "0.8", optional = true}
